Adjust display text size to prevent overflow

--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
 
 #display-text {
     height: 60px;
-    font-size: 40px;
+    font-size: 38px;
     color: white;
     display: flex;
     justify-content: flex-end;
